Fixed margin-top slightly jumping when index-content-container hiding

--- a/css/style.css
+++ b/css/style.css
@@ -975,7 +975,7 @@ list-style: none;
 	}
 
 	.index-content-container.hide {
-		margin-top:389px;
+		margin-top:393px;
 		height:0px;
 		-webkit-transition: height 0s 600ms;
 	  	transition:         height 0s 600ms;
